--- a/07-devsteam/src/App.css
+++ b/07-devsteam/src/App.css
@@ -1,1 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
+body {
+  font-family: "Inter", sans-serif;
+  background-color: #1b2838;
+  margin: 0;
+  padding: 0;
+  color: #fff !important;
+}
+
+.buscar,
+.buscar::placeholder {
+  background-color: #2a475e;
+  color: #d7d7d7;
+}
+
+.promoCard {
+  width: 280px;
+  transition: transform 0.2s;
+  background: linear-gradient(to bottom, #19587b, #2b87ae);
+}
+
+.promoCard:hover {
+  transform: scale(1.02);
+}
+
+.desconto {
+  background-color: #4c6b22;
+  color: #beeb14;
+}
+
+.corValor {
+  color: #beeb14;
+}
+
+#addCarinho:hover {
+  background-color: #547625;
+}
